<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">




    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/classifieds_logo"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_below="@id/login_header"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_centerInParent="true"
        android:layout_marginTop="60sp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_below="@id/username"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="25sp"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_below="@id/password"
        android:layout_marginTop="50sp"
        android:layout_centerInParent="true"
        />

    <ImageView
        android:id="@+id/classifieds_logo"
        android:layout_width="wrap_content"
        android:layout_height="250sp"
        android:layout_marginTop="20sp"
        app:srcCompat="@drawable/usclassifieds_logo" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Not signed up yet? Click here to sign up!"
        android:layout_below="@id/login"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:layout_marginTop="30sp"
        />

</RelativeLayout>
