<?xml version= "1.0" encoding="utf-8" ?>

<!--skeleton from worldclub menu.xml (below and above) -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sorting"
        android:title="Sort"
        />

    <item
        android:id="@+id/search"
        android:title="Search"

        android:icon="@drawable/ic_action_search"
        app:showAsAction="always|collapseActionView"
        android:queryHint="Search here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <!--        there were multiple similar for the above line-->

</menu>
