...

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myrecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<!--    <TextView-->
<!--        android:id="@+id/helloWorldTv"-->
<!--        android:layout_width="wrap_content"-->
...
